--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <ol>
-        <li>Tel : 0801234567</li>
-        <li>Email: Thitinunyodtha@gmail.com</li>
+        <li>Tel : 080XXXXXXX</li>
+        <li>Email: TXXXXXXXXX@gmail.com</li>
     </ol>
 </body>
 </html>
