Add ตกแต่งเพิ่ม CSS_V.2

--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document thitinun</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-color: aliceblue;
+        }
+        hr {
+            background-color: rgb(83, 105, 105);
+        }
+    </style>
 </head>
 <body>
-    <img src="Profile.jpg" alt="" style="width: 50%; height: auto;">
+    <img src="Profile.jpg" alt="" style="width: 50%; height: 50%;">
     <h1>วิวธรรมชาติที่สร้างขึ้นเองได้</h1>
     <a href="https://www.paiduaykan.com/"> รายละเอียดข้อมูลการท่องเที่ยว</a>
     <br>
     <a href="contact.html"> CONTACT: ติดต่อสอบถามข้อมูล</a>
+
+    <hr style ="border-style: dotted; height: 15px;">
 
     <!---<h3>รายชื่อสถานที่การท่องเที่ยวเขาธรรมชาติ</h3>--->
     <!--<ul>
