--- a/index.html
+++ b/index.html
@@ -1,65 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document thitinun</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            background-color: aliceblue;
-        }
-        hr {
-            background-color: rgb(83, 105, 105);
-        }
-    </style>
+  <meta charset="utf-8">
+  <title>Bacon Fansite</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="Profile.jpg" alt="" style="width: 50%; height: 50%;">
-    <h1>วิวธรรมชาติที่สร้างขึ้นเองได้</h1>
-    <a href="https://www.paiduaykan.com/"> รายละเอียดข้อมูลการท่องเที่ยว</a>
-    <br>
-    <a href="contact.html"> CONTACT: ติดต่อสอบถามข้อมูล</a>
-
-    <hr style ="border-style: dotted; height: 15px;">
-
-    <!---<h3>รายชื่อสถานที่การท่องเที่ยวเขาธรรมชาติ</h3>--->
-    <!--<ul>
-        <li>ดอยหลวงเชียงราย 17 ํ</li>
-        <li>ม่อนแจ่ม 15 ํ</li>
-        <li>ถ้ำเชียงดาว 14 ํ</li>
-        <li>แม่กำปอง 10 ํ</li>-->
-    <!--list table-->
-    
-    <table>
-        <thead>
-            <tr>
-                <th>
-                รายชื่อสถานที่ท่องเที่ยวยอดนิยม 2024
-                </th>
-                <th>
-                ระดับความชื้น ํ
-                </th>
-            </tr>
-        </thead>
-
-        <tr>
-            <td>ดอยหลวงเชียงราย</td>
-            <td>17 ํ</td>
-        </tr>
-        <tr>
-            <td>ม่อนแจ่ม</td>
-            <td>15 ํ</td>
-        </tr>
-        <tr>
-            <td>ถ้ำเชียงดาว</td>
-            <td>14 ํ</td>
-        </tr>
-        <tr>
-            <td>แม่กำปอง</td>
-            <td>10 ํ</td>
-        </tr>
-    </table>
-    </ul>
+  <h1 id ="heading">I Love Bacon</h1>
+  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
+  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
+  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
+  <img class="bacon" src="bacon.png" alt="bacon-img">   
+  <!-- circular ทำเป็นรูปวงกลม  และเพิ่มหลาย class ได้ -->
+  <img class="broccoli circular" src="broccoli.png" alt="broccoli-img">
 </body>
 </html>
